[package]
name = "io-utils"
version = "0.1.0"
authors = ["Ryan Lehmkuhl <ryanleh.ob@gmail.com>"]
edition = "2018"

[dependencies]
async-std = {version = "1.9.0", features= ["unstable"] }
crossbeam-utils = "0.8.1"
futures = "0.3.12"
pollster = "0.3.0"

[dev-dependencies]
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }
clap = "2.33.3"
